Thu May 21 13:03:50 PDT 1998 Manish Singh <yosh@gimp.org>

	* updated Adam's stuff

	* app/app_procs.c: squleched warning

	* gimptool.in: quote stuff to be flexible about our CC settings

Wed May 20 20:21:45 EST 1998 Stephen Norris <srn@fn.com.au>

	* plug-ins/bz2/bz2.c: Check return code from fopen.
	* plug-ins/gz/gz.c: Check return code from fopen.

Tue May 19 14:02:41 MET DST 1998 Sven Neumann <sven@gimp.org>

	* added a new script from Wolfgang Hofer (fade-outline.scm)

Mon May 18 20:30:44 MEST 1998 Sven Neumann <sven@gimp.org>

	* updated the gfli plug-in to the version on the registry and
	folded the "chunk-type-7-bug"-patch back in

Sun May 17 23:06:38 EDT 1998  Matthew Wilson  <msw@gimp.org>

	* app/app_procs.c: applied patch from Michael Sweet to correct
	NULL deref in splash screen.

Mon May 18 02:50:03 MEST 1998 Sven Neumann <sven@gimp.org>

	* plug-ins/tiff/tiff.c: updated tiff plug-in

Sun May 17 17:31:05 PDT 1998 Manish Singh <yosh@gimp.org>

	* plug-ins/maze: updated maze plugin

	* plug-ins/script-fu/scripts/circuit.scm: reflected maze pdb
	interface change

Sun May 17 14:44:32 PDT 1998 Manish Singh <yosh@gimp.org>

	* app/gimage.c: fix for merging indexed and indexed-alpha
	layers (from Raph)

Sun May 17 14:02:44 PDT 1998 Manish Singh <yosh@gimp.org>

	* app/app_procs.c: reverted the splash screen idle loop changes
	since they expose some weird GtkLabel redraw bugs

Sun May 17 00:15:40 PDT 1998 Manish Singh <yosh@gimp.org>

	* Made 0.99.31 release
	
	* updated print plugin

Fri May 15 23:35:43 PDT 1998 Manish Singh <yosh@gimp.org>

	* app/fileops.c: made url plugin autodetect work again

Fri May 15 03:54:48 EDT 1998  Matthew Wilson  <msw@gimp.org>

	* gimp_tips.txt: fixed typo

Fri May 15 03:03:00 EDT 1998  Matthew Wilson  <msw@gimp.org>

	* app/iscissors.c: fixed bezierify on offset layers
	
Thu May 14 21:18:27 EDT 1998  Matthew Wilson  <msw@gimp.org>

	* app/iscissors.c: a very sad attempt to fix some iscissors
	lockups/segfaults
