@@ -1,3 +1,7 @@
+Fri May 22 00:46:18 EDT 1998  Matthew Wilson  <msw@gimp.org>
+
+	* app/batch.c: removed global conversion from '-' to '_'
+
 Thu May 21 13:03:50 PDT 1998 Manish Singh <yosh@gimp.org>
 
 	* updated Adam's stuff
